retrieving shortened urls from db done
