# docs/swagger.json
@@ -46,7 +46,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.ShortenedUrl"
+                            "$ref": "#/definitions/models.Url"
                         }
                     },
                     "400": {
@@ -68,7 +68,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    ""
+                    "redirect"
                 ],
                 "summary": "redirect shortened urls to the actual urls",
                 "parameters": [
@@ -76,13 +76,24 @@
                         "type": "string",
                         "description": "Short URL",
                         "name": "shortUrl",
-                        "in": "path",
-                        "required": true
+                        "in": "path"
                     }
                 ],
                 "responses": {
                     "307": {
                         "description": "Temporary Redirect"
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
                     }
                 }
             }
@@ -97,7 +108,7 @@
                 }
             }
         },
-        "models.ShortenedUrl": {
+        "models.Url": {
             "type": "object",
             "properties": {
                 "id": {
